v0.4.2  - Scrollbar fix

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -22,7 +22,7 @@ h3 {
     height: 500px;
     margin: 0;
     padding: 10px 0;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 .logo {
